fix: tech overflow & font style

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,5 +5,14 @@
 body {
   color: #000;
   background-color: #f5f5f5;
-  font-family: 'Microsoft YaHei';
+  font-family:
+    'Microsoft YaHei',
+    'PingFang SC',
+    miui,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    Helvetica Neue,
+    Helvetica,
+    sans-serif;
 }
